--- a/Projet.ipynb
+++ b/Projet.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -18,7 +18,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "le vent va vers l est\n"
+      "Veuillez choisir vers où soufflera le vent\n",
+      "1: Nord, 2: Sud, 3: Est, 4: Ouest, 5: Nord-Ouest, 6: Nord-Est, 7: Sud-Ouest, 8: Sud-Est2\n",
+      "le vent va vers le sud\n"
      ]
     }
    ],
@@ -28,8 +30,9 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "L = 20\n",
-    "\n",
-    "vent = randint(1,4)\n",
+    "print('Veuillez choisir vers où soufflera le vent')\n",
+    "vent = input('1: Nord, 2: Sud, 3: Est, 4: Ouest, 5: Nord-Ouest, 6: Nord-Est, 7: Sud-Ouest, 8: Sud-Est')\n",
+    "vent = int(vent)\n",
     "\n",
     "NORDx  = -1\n",
     "NORDy  = 0\n",
@@ -43,25 +46,78 @@
     "OUESTx = 0\n",
     "OUESTy = -1\n",
     "\n",
-    "if vent == 1 :\n",
+    "NordOuestx = 0\n",
+    "NordOuesty = 0\n",
+    "\n",
+    "NordEstx = 0\n",
+    "NordEsty = 2\n",
+    "\n",
+    "SudOuestx = 2\n",
+    "SudOuesty = 0\n",
+    "\n",
+    "SudEstx = 2\n",
+    "SudEsty = 2\n",
+    "\n",
+    "if vent == 1:\n",
     "    Ventx  = NORDx \n",
     "    Venty  = NORDy\n",
     "    print('le vent va vers le nord')\n",
     "    \n",
-    "if vent == 2 :\n",
+    "if vent == 2:\n",
     "    Ventx  = SUDx \n",
     "    Venty  = SUDy\n",
     "    print('le vent va vers le sud')\n",
     "    \n",
-    "if vent == 3 :\n",
+    "if vent == 3:\n",
     "    Ventx  = OUESTx \n",
     "    Venty  = OUESTy\n",
     "    print('le vent va vers l ouest')\n",
     "\n",
-    "if vent == 4 : \n",
+    "if vent == 4: \n",
     "    Ventx  = ESTx \n",
     "    Venty  = ESTy\n",
-    "    print('le vent va vers l est')\n"
+    "    print('le vent va vers l est')\n",
+    "    \n",
+    "if vent == 5:\n",
+    "    Ventx = NordOuestx\n",
+    "    Venty = NordOuesty\n",
+    "    print('Le vent va vers le nord-ouest')\n",
+    "\n",
+    "if vent == 6:\n",
+    "    Ventx = NordEstx\n",
+    "    Venty = NordEsty\n",
+    "    print('Le vent va vers le nord-est')\n",
+    "    \n",
+    "if vent == 7:\n",
+    "    Ventx = SudOuestx\n",
+    "    Venty = SudOuesty\n",
+    "    print('Le vent va vers le sud-ouest')\n",
+    "\n",
+    "if vent == 8:\n",
+    "    Ventx = SudEstx\n",
+    "    Venty = SudEsty\n",
+    "    print('Le vent va vers le sud-est')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "choisissez à présent le niveau de vent que vous voulez? 1: vent fort     2: vent nul      3: vent moyen2\n",
+      "Vous avez choisi le choix : 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "Choix = input('choisissez à présent le niveau de vent que vous voulez? 1: vent fort     2: vent nul      3: vent moyen')\n",
+    "print('Vous avez choisi le choix :',Choix)"
    ]
   },
   {
@@ -189,12 +245,31 @@
    },
    "outputs": [],
    "source": [
-    "def matrice_proba(vent_x, vent_y):\n",
+    "def matrice_proba(ventx, venty):\n",
     "    p = np.zeros((3, 3))\n",
-    "    p[0, 1] = 0.5\n",
-    "    p[1, 0] = 0.5\n",
-    "    p[1, 2] = 0.1\n",
-    "    p[2, 1] = 0.1\n",
+    "    if choix == 1:                        #vent fort\n",
+    "        p[ventx, venty] = 1\n",
+    "        if vent == 1 or vent == 2:\n",
+    "            p[ventx,venty +1] = 1\n",
+    "            p[ventx,venty -1] = 1\n",
+    "        elif vent == 3 or vent == 4:\n",
+    "            p[ventx +1,venty] = 1\n",
+    "            p[ventx -1,venty] = 1\n",
+    "        elif vent == 5 or vent == 6:\n",
+    "            p[ventx +1,venty] = 1/2\n",
+    "            p[ventx,venty -1] = 1/2\n",
+    "        else :\n",
+    "            p[ventx -1,venty] = 1/2\n",
+    "            p[ventx,venty +1] = 1/2\n",
+    "    elif choix == 2:                      #vent inexistant\n",
+    "        for i in range (0,2):\n",
+    "            for j in range (0,2):\n",
+    "                p[i,j] = 0.5\n",
+    "    else :                                #vent normal\n",
+    "            if vent == 1:\n",
+    "                p[ventx,venty] = 0.5\n",
+    "                p[]\n",
+    "                \n",
     "    return p"
    ]
   },
